--- a/app/src/main/res/values-es/strings.xml
+++ b/app/src/main/res/values-es/strings.xml
@@ -68,7 +68,7 @@
   <string name="CREATING">Crando, espere por favor&#8230;</string>
   <string name="CURRENT_PWD">Contraseña actual</string>
   <string name="CancelingTips">Cancelado&#8230;</string>
-  <string name="Cellular_Data_Method">Datos móviles, consulte el siguiente método:</string>
+  <string name="Cellular_Data_Method">Datos móviles:</string>
   <string name="Cellular_Data_Set_Up">Habilitar datos móviles en el dispositivo, utilice a continuación, Configuración> Datos móviles</string>
   <string name="ChargingLight">Luz de carga</string>
   <string name="ChargingLight_BlueFlashing">Parpadeo azul: Carga</string>
@@ -145,7 +145,9 @@
   <string name="DOOR_WIFI_HINT">Indicador LED de estado</string>
   <string name="DailyGreatTips_Full">Número de la colección de Gran día ha alcanzado el límite superior de 50, va a eliminar?</string>
   <string name="Dec">Dec.</string>
+  <string name="Delete_Share">¿Eliminar parte?</string>
   <string name="Device_Disconnected">Desconectado</string>
+  <string name="Dont_Show_Again">No mostrar de nuevo</string>
   <string name="Download_Then_Share">Descargue el video y luego comparta</string>
   <string name="Downloading">El video se está descargando</string>
   <string name="EDIT_IMAGE">Editar</string>
@@ -213,9 +215,11 @@
   <string name="FRI_1">Cada viernes</string>
   <string name="FRI_2">Cinco</string>
   <string name="FROME">Hora de inicio</string>
+  <string name="Fail_Record">No se puede grabar</string>
   <string name="Feb">Feb.</string>
   <string name="Feedback_MessageFailed">Error al enviar el mensaje</string>
   <string name="Feedback_Sending">enviando&#8230;</string>
+  <string name="Formatting">Formateo</string>
   <string name="GENERAL">General</string>
   <string name="GET_CODE">Codigo de prueba</string>
   <string name="GIVE_UP">Renunciar</string>
@@ -275,6 +279,7 @@
   <string name="LOGOUT_INFO">No se borrarán los datos de la cuenta al salir</string>
   <string name="LOW_BATTERY">El poder es baja</string>
   <string name="Loaded">Cargado</string>
+  <string name="Logo_Selection">Ninguna</string>
   <string name="MAC">MAC</string>
   <string name="MAGNETISM_NOTIFY">Notificarme interruptor magnético</string>
   <string name="MAGNETISM_OFF">Cierre</string>
@@ -455,6 +460,7 @@
   <string name="RE_ADD_BUTTONG">Añada de nuevo</string>
   <string name="RE_ADD_LABEL">Renovación cumplida</string>
   <string name="RIGN_SUC">Registrado correctamente</string>
+  <string name="Record_Operate">No puede funcionar durante la grabación</string>
   <string name="Request_TimeOut">Tiempo fuera</string>
   <string name="Reset_Suc">Ya parpadeado en rojo</string>
   <string name="RuiShi_Guide">Use la aguja para presionar el botón RESET durante 3 segundos</string>
@@ -541,8 +547,11 @@
   <string name="Sep">Sep.</string>
   <string name="ShareTo">Share to %s</string>
   <string name="SharedTo">Share to</string>
+  <string name="Sharing_Management">compartir la gestión</string>
   <string name="Slogan">Homesick, Use Clever Dog</string>
   <string name="Slogan_Zhongxing">Smart Home, for better life</string>
+  <string name="Switch_Mode">por favor, cambie al modo de aire libre para ver el contenido de tiro</string>
+  <string name="Switch_Mode_Pop">por favor, cambie el contenido actual de la red de tiro al modo aire libre</string>
   <string name="TAKE_PHOTO">Tomar una foto</string>
   <string name="TERM_OF_USE">Condiciones de uso</string>
   <string name="THEME_DELETED">%s ha sido eliminado</string>
@@ -581,6 +590,7 @@
   <string name="Tap0_register_VerificationTips">El correo de activación se ha enviado a %s, haz clic en el enlace para activar tu cuenta.</string>
   <string name="Tap0_wrongcode">Código de verificación incorrecto</string>
   <string name="Tap1_AddDeviceTips">Haga clic en\"+\"para agregar dispositivo(s).</string>
+  <string name="Tap1_AddDevice_CameraTipShort">pulsado el botón Wi&#8211;Fi para 1s</string>
   <string name="Tap1_AddDevice_CameraTips">Espere a que el indicador parpadee en azul</string>
   <string name="Tap1_AddDevice_CameraTipsTitle">pulsado el botón Wi&#8211;Fi para 3s</string>
   <string name="Tap1_AddDevice_ConnectWifi">Conectar a la red Wi&#8211;Fi.</string>
@@ -676,7 +686,8 @@
   <string name="Tap1_Device_NoConnection">Sin conexión de red,clic Refrescar</string>
   <string name="Tap1_Device_UpgradeTips">Buscar nuevo firmware del dispositivo, para actualizar o no?</string>
   <string name="Tap1_Disconnected">Desconectado</string>
-  <string name="Tap1_DisconnectedPleaseCheck">Desconectado, compruebe la conexión de red.</string>
+  <string name="Tap1_DisconnectedPleaseCheck">Desconectado, compruebe la conexión de red>></string>
+  <string name="Tap1_DisconnectedPleaseChecked">Desconectado, compruebe la conexión de red.</string>
   <string name="Tap1_DoorFun_VoiceTips">Sonidos estarán fuera del receptor</string>
   <string name="Tap1_DoorFun_Waitting">Esperando&#8230;</string>
   <string name="Tap1_DownloadFirmwareFai">Descargar el firmware falló</string>
@@ -708,7 +719,7 @@
   <string name="Tap1_NeedsInitializedTips">Tarjeta SD necesita ser inicializado y los datos se borraron, seguro de continuar?</string>
   <string name="Tap1_NewFirmware">Nuevo firmware</string>
   <string name="Tap1_NoMessages">Ningún mensaje</string>
-  <string name="Tap1_Offline">Fuera de línea, por favor, vuelva a conectar.</string>
+  <string name="Tap1_Offline">Fuera de línea, por favor, vuelva a conectar>></string>
   <string name="Tap1_OutdoorMode">Modo al aire libre</string>
   <string name="Tap1_OutdoorMode_Opened">Modo de exteriores se ha abierto</string>
   <string name="Tap1_Refreshed">Refreshed</string>
@@ -859,7 +870,9 @@
   <string name="Tips_DeleteFail">Con anomalía para suprimirlos</string>
   <string name="Tips_Device_ConnectFail">Error al conectar</string>
   <string name="Tips_Device_TimeoutRetry">De tiempo de espera, intente de nuevo</string>
+  <string name="Tips_ShortVideo">Pulsado para grabar un vídeo de corta duración</string>
   <string name="Tips_SureDelete">Asegúrese de eliminar?</string>
+  <string name="Treaty_url">http://www.jfgou.com/app/treaty%s_en.html</string>
   <string name="UPDATE_DISCONNECT">Ausrüstung keine Antwort, versuchen Sie es erneut</string>
   <string name="UPDATE_FAIL">Conexión del dispositivo fallido, por favor, inténtalo de nuevo</string>
   <string name="UPDATING_BUTTON">Renovando</string>
@@ -913,7 +926,7 @@
   <string name="WiFiLight_RedNBlueFlashing">Parpadeo rojo y azul: Actualización</string>
   <string name="WiFiLight_SteadyBlue">Azul constante: WiFi en línea</string>
   <string name="Wifi_Hotspot">En el dispositivo [Configuración> LAN inalámbrica], elija un punto de acceso Wi&#8211;Fi para conectarse.</string>
-  <string name="Wifi_Method">Wi&#8211;Fi, consulte los siguientes métodos:</string>
+  <string name="Wifi_Method">Wi&#8211;Fi:</string>
   <string name="Wifi_Set_Up">Ir a configurar</string>
   <string name="Word_Hours">Hora</string>
   <string name="XX_DISCOVERY">\"%s\" Entidad moviendo</string>
@@ -943,8 +956,7 @@
   <string name="getting">Por favor, espere&#8230;</string>
   <string name="has_copy">Copiar el éxito</string>
   <string name="has_not_sdcard">No tarjeta Micro SD disponible</string>
-  <string name="help_url">https://%s:8081/helps/es.html</string>
-  <string name="help_url_Doby">https://%s:8081/helps/en_doby.html</string>
+  <string name="help_url">https://%1$s:8081/helps/en%2$s.html</string>
   <string name="isStorageLow">No se dispone de espacio de la tarjeta Micro SD</string>
   <string name="is_connecting_video">Conectando</string>
   <string name="is_creating">Añadiendo</string>
